chore: optimize Docker build and fix security vulnerabilities
- Fix security: update undici (>=6.21.2) and esbuild (>=0.25.12) via pnpm overrides
- Remove all known vulnerabilities (0 found)
- Optimize Dockerfile: multi-stage build with production-only dependencies
- Add build:prod script to skip tests/typecheck in Docker
- Fix TypeScript errors:
  - Project.trails/professors Set -> Array conversion in presenter
  - Remove createdAt/updatedAt from Project mapper (not in Props)
  - Fix Report schema (remove relationName, simplify references)
- Improve .dockerignore (exclude test files, docs, dev configs)
- Add .env.docker.example with production-ready defaults
- Add README.Docker.md with comprehensive Docker documentation
- Update Makefile with docker-build and docker-clean targets
- Specify pnpm@10.17.0 in Dockerfile for consistency

--- a/.dockerignore
+++ b/.dockerignore
@@ -20,8 +20,11 @@ build
 test
 *.spec.ts
 *.test.ts
+*.e2e-spec.ts
+*.integration.spec.ts
 vitest.config.mjs
 vitest.config.e2e.mjs
+vitest.config.integration.mjs
 
 # Git
 .git
@@ -38,19 +41,24 @@ vitest.config.e2e.mjs
 # Documentation
 *.md
 !README.md
+AGENTS.md
+PROJECT_ORGANIZATION.md
+CONTRIBUTING.md
 
 # Docker
 Dockerfile
+Dockerfile.*
 docker-compose*.yml
 .dockerignore
 
 # CI/CD
 .github
 
-# Scripts
+# Scripts (helpers locais)
 scripts
 
 # Misc
 .DS_Store
 Thumbs.db
+Makefile
 
